# modorganizer-lootcli

./: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
src/: CMakeLists.txt  lootthread.cpp  lootthread.h  main.cpp  pch.h  version.h  version.rc
